# World-To-Image

./: .gitignore  README.md  pyproject.toml  run.py  run_single.py
configs/: config_base.yaml
prompts/: eval_prompt_diffusiondb.jsonl  eval_prompt_lexica.jsonl  nice.jsonl
src/: __init__.py
src/optim/: __init__.py  base_llm_engine.py  image_retriever.py  orchestrator.py  prompt_optimizer.py
src/pipeline/: __init__.py  pipeline.py
src/results/: best_result_metadata.json  iteration_01_metadata.json  iteration_02_metadata.json  iteration_03_metadata.json  optimization_results.json  session_metadata.json
src/scoring/: __init__.py  aesthetic.py  base.py  clip.py  config.py  hpsv2.py  manager.py
src/utils/: __init__.py  logging.py  utils.py
